--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,13 +44,13 @@
         "jwt-decode": "^4.0.0",
         "libphonenumber-js": "^1.12.15",
         "lucide-react": "^0.542.0",
+        "mapbox-gl": "^3.18.1",
         "next-themes": "^0.4.6",
         "react": "^19.1.0",
         "react-avatar-editor": "^13.0.2",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.71.1",
         "react-phone-number-input": "^3.4.12",
-        "recoil": "^0.7.7",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.12",
@@ -68,6 +68,7 @@
         "@tanstack/router-vite-plugin": "^1.131.30",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
+        "@types/mapbox-gl": "^3.4.1",
         "@types/node": "^24.3.0",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
