--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,5 +3,11 @@
     "outputDirectory": "dist",
     "framework": "vite",
     "installCommand": "npm install",
-    "devCommand": "npm run dev"
+    "devCommand": "npm run dev",
+    "rewrites": [
+        {
+            "source": "/api/v1/:path*",
+            "destination": "http://15.206.202.11:5000/api/v1/:path*"
+        }
+    ]
 }
