--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,11 +1,8 @@
-[phases.setup]
-nixPkgs = ["python312", "pip"]
+[providers]
+python = "3.12"
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
-
-[phases.build]
-cmds = ["echo 'Build complete'"]
+cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
 
 [start]
 cmd = "uvicorn src.app.main:app --host 0.0.0.0 --port $PORT"
